# git-vogue-acceptance

cabal-malformed/: LICENSE  README.md  git-vogue-cabal-malformed.cabal
good-example/: Main.hs  git-vogue-good-example.cabal
hlint-noopt/: Main.hs  git-vogut-hlint-noopt.cabal
stylish-unstylish/: Main.hs  git-vogue-stylish-unstylish.cabal
