name:                git-vogut-hlint-noopt
version:             0.1.0.0
synopsis:            Test package for git-vogue that fails hlint tests
description:         Test package for git-vogue that fails hlint tests
license:             BSD3
license-file:        LICENSE
author:              Anchor Engineering <engineering@anchor.com.au>
maintainer:          Anchor Engineering <engineering@anchor.com.au>
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            https://github.com/anchor/git-vogue-acceptance

executable git-vogut-hlint-noopt
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
  default-language:    Haskell2010